# copilot-cli

./: .gitignore  README.md  pyproject.toml
compliance/: api.py  cli.py  config.py  updater.py  utils.py
compliance/commands/: auth.py  catalogue.py  docs.py  help.py  rules.py  telemetry.py  workspace.py
