[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-copilot"
version = "1.0.1"
description = "CLI tool for Compliance Copilot"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "keyring>=25.0",
    "questionary>=2.0",
]

[project.scripts]
compliance = "compliance.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["compliance*"]

[tool.bumpversion]
current_version = "1.0.1"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
